@@ -1,11 +1,13 @@
 
 ActionController::Base.class_eval do
   
+  # Make a note of an exception associated with the currently executin
+  # controller action.  Note that this used to be available on Object
+  # but we replaced that global method with NewRelic::Agent#notice_error.
+  # Use that one outside of controller actions.
   def newrelic_notice_error(exception, custom_params = {})
     filtered_params = (respond_to? :filter_parameters) ? filter_parameters(params) : params
-    
     filtered_params.merge!(custom_params)
-    
     NewRelic::Agent.agent.error_collector.notice_error(exception, request, newrelic_metric_path, filtered_params)
   end
   
@@ -23,4 +25,3 @@ ActionController::Base.class_eval do
 
 end if defined? ActionController
 
-Object.send :include, NewRelic::Agent::Instrumentation::ErrorInstrumentation
